--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Dania.Courses.Databases2020.MVP.Model</AssemblyName>
     <RootNamespace>Dania.Courses.Databases2020.MVP.Model</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.115.5" />
+  </ItemGroup>
 
 </Project>
