--- a/Model/database.csproj
+++ b/Model/database.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Dania.Courses.Databases2020.MVP.Model</AssemblyName>
-    <RootNamespace>Dania.Courses.Databases2020.MVP.Model</RootNamespace>
+    <AssemblyName>database</AssemblyName>
+    <RootNamespace>database</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
